--- a/shares.conf
+++ b/shares.conf
@@ -1,32 +1,34 @@
 # Samba shares configuration
 
-[secure-share]
-   comment = Secure Shared Folder with Full Access
-   path = /var/www/
-   valid users = @smbusers,root
-   writable = yes
-   browsable = yes
+[lyarinet]
+   path = /var/www
+   valid users = root,asif,@smbusers,@username1
+   write list = root,asif,@smbusers,@username1
+   create mask = 0744
+   directory mask = 0755
+   comment = my test
+   browseable = yes
    read only = no
-   create mask = 0770
-   directory mask = 0770
+   guest ok = no
    force group = smbusers
-   inherit permissions = yes
-
-[share]
-   comment = Secure Shared Folder with Full Access
-   path = /home/fida/samba_manager
-   valid users = @smbusers,root
-   writable = yes
-   browsable = yes
-   read only = no
-   create mask = 0770
-   directory mask = 0770
-   force group = smbusers
-   inherit permissions = yes
+   valid_users_list = ['root', 'asif']
+   valid_groups_list = ['@smbusers', '@username1']
+   write_users_list = ['root', 'asif']
+   write_groups_list = ['@smbusers', '@username1']
 
 [testing]
-   path = /var/www/html/files
+   path = /var/www/html/pos.lyarinet.com
+   valid users = root,asif
+   write list = root,asif
+   create mask = 0744
+   directory mask = 0755
+   comment = my tests
+   browseable = yes
    read only = no
-   valid users = @smbusers
-   vfs objects = 
+   guest ok = no
+   force group = smbusers
+   valid_users_list = ['root', 'asif']
+   valid_groups_list = []
+   write_users_list = ['root', 'asif']
+   write_groups_list = []
 
