--- a/smb.conf.template
+++ b/smb.conf.template
@@ -1,5 +1,5 @@
 [global]
-   server string = Samba Server 1
+   server string = Samba Server
    workgroup = WORKGROUP
    log level = 1
    include = /etc/samba/shares.conf
