--- a/smb.conf
+++ b/smb.conf
@@ -1,16 +1,30 @@
 [global]
-    server string = Samba Server
-    workgroup = WORKGROUP
-    log level = 1
-    include = ./shares.conf
-    server role = standalone
-    log file = /var/log/samba/log.%m
-    max log size = 1000
-    security = user
-    encrypt passwords = yes
-    guest account = nobody
-    map to guest = Bad User
-    bind interfaces only = no
-    hosts allow = 10.240.150.230
-    hosts deny = ALL
+   workgroup = WORKGROUP
+   server string = Samba Server
+   log level = 1
+   security = user
+   map to guest = Never
+   log file = /var/log/samba/log.%m
+   max log size = 1000
+   guest account = nobody
+   bind interfaces only = no
+   include = /etc/samba/shares.conf
+   server role = standalone
+   encrypt passwords = yes
+
+[printers]
+   comment = All Printers
+   browseable = no
+   path = /var/tmp
+   printable = yes
+   guest ok = no
+   read only = yes
+   create mask = 0700
+
+[print$]
+   comment = Printer Drivers
+   path = /var/lib/samba/printers
+   browseable = yes
+   read only = yes
+   guest ok = no
 
