restart stop start button set

--- a/shares.conf
+++ b/shares.conf
@@ -1,5 +1,21 @@
 # Samba shares configuration
 
+[server]
+   path = /var/www/html
+   valid users = 
+   write list = 
+   create mask = 0775
+   directory mask = 0775
+   comment = 
+   browseable = yes
+   read only = no
+   guest ok = no
+   force group = smbusers
+   valid_users_list = []
+   valid_groups_list = []
+   write_users_list = []
+   write_groups_list = []
+
 [lyarinet]
    path = /var/www
    valid users = root,asif,@smbusers,@username1
@@ -31,4 +47,16 @@
    valid_groups_list = []
    write_users_list = ['root', 'asif']
    write_groups_list = []
+
+[share]
+   path = /srv/samba/share
+   valid users = @smbusers
+   write list = 
+   create mask = 0770
+   directory mask = 0770
+   read only = no
+   guest ok = no
+   browseable = yes
+   force group = smbusers
+   comment = 
 
