--- a/smb.conf
+++ b/smb.conf
@@ -1,30 +1,38 @@
 [global]
-   workgroup = WORKGROUP
-   server string = Samba Server
-   log level = 1
-   security = user
-   map to guest = Never
-   log file = /var/log/samba/log.%m
-   max log size = 1000
-   guest account = nobody
-   bind interfaces only = no
-   include = /etc/samba/shares.conf
-   server role = standalone
-   encrypt passwords = yes
+    workgroup = WORKGROUP
+    server string = Samba Server
+    log level = 1
+    security = user
+    map to guest = Never
+    log file = /var/log/samba/log.%m
+    max log size = 1000
+    guest account = nobody
+    bind interfaces only = no
+    include = /etc/samba/shares.conf
+    server role = standalone
+    encrypt passwords = yes
+    unix charset = UTF-8
+    dos charset = CP850
+    deadtime = 15
+    keepalive = 300
+    max connections = 0
+    socket options = TCP_NODELAY IPTOS_LOWDELAY
+    dns proxy = no
+    usershare allow guests = no
 
 [printers]
-   comment = All Printers
-   browseable = no
-   path = /var/tmp
-   printable = yes
-   guest ok = no
-   read only = yes
-   create mask = 0700
+    comment = All Printers
+    browseable = no
+    path = /var/tmp
+    printable = yes
+    guest ok = no
+    read only = yes
+    create mask = 0700
 
 [print$]
-   comment = Printer Drivers
-   path = /var/lib/samba/printers
-   browseable = yes
-   read only = yes
-   guest ok = no
+    comment = Printer Drivers
+    path = /var/lib/samba/printers
+    browseable = yes
+    read only = yes
+    guest ok = no
 
