mx connection fix

--- a/shares.conf
+++ b/shares.conf
@@ -3,14 +3,15 @@
 [server]
    path = /var/www/html
    valid users = 
-   write list = 
+   write_list = 
    create mask = 0775
-   directory mask = 0775
+   directory_mask = 0775
    comment = 
    browseable = yes
    read only = no
-   guest ok = no
    force group = smbusers
+   max connections = 0
+   guest_ok = no
    valid_users_list = []
    valid_groups_list = []
    write_users_list = []
@@ -18,45 +19,48 @@
 
 [lyarinet]
    path = /var/www
-   valid users = root,asif,@smbusers,@username1
-   write list = root,asif,@smbusers,@username1
+   valid users = root,asif,@smbusers,@username1,@smbusers,@smbusers,@smbusers,@smbusers
+   write_list = 
    create mask = 0744
-   directory mask = 0755
+   directory_mask = 0775
    comment = my test
    browseable = yes
    read only = no
-   guest ok = no
+   guest_ok = no
    force group = smbusers
-   valid_users_list = ['root', 'asif']
-   valid_groups_list = ['@smbusers', '@username1']
-   write_users_list = ['root', 'asif']
-   write_groups_list = ['@smbusers', '@username1']
+   max connections = 2
 
 [testing]
    path = /var/www/html/pos.lyarinet.com
    valid users = root,asif
-   write list = root,asif
+   write_list = 
    create mask = 0744
-   directory mask = 0755
+   directory_mask = 0775
    comment = my tests
    browseable = yes
    read only = no
-   guest ok = no
    force group = smbusers
+   max connections = 0
+   guest_ok = no
    valid_users_list = ['root', 'asif']
    valid_groups_list = []
-   write_users_list = ['root', 'asif']
+   write_users_list = []
    write_groups_list = []
 
 [share]
    path = /srv/samba/share
    valid users = @smbusers
-   write list = 
+   write_list = 
    create mask = 0770
-   directory mask = 0770
-   read only = no
-   guest ok = no
-   browseable = yes
-   force group = smbusers
+   directory_mask = 0775
    comment = 
+   browseable = yes
+   read only = no
+   force group = smbusers
+   max connections = 0
+   guest_ok = no
+   valid_users_list = []
+   valid_groups_list = ['@smbusers']
+   write_users_list = []
+   write_groups_list = []
 
