--- a/shares.conf
+++ b/shares.conf
@@ -26,12 +26,16 @@
    comment = my test
    browseable = yes
    read only = no
-   guest_ok = no
    force group = smbusers
    max connections = 2
+   guest_ok = no
+   valid_users_list = ['root', 'asif']
+   valid_groups_list = ['@smbusers', '@username1', '@smbusers', '@smbusers', '@smbusers', '@smbusers']
+   write_users_list = []
+   write_groups_list = []
 
 [testing]
-   path = /var/www/html/pos.lyarinet.com
+   path = /var/www/html
    valid users = root,asif
    write_list = 
    create mask = 0744
@@ -39,13 +43,9 @@
    comment = my tests
    browseable = yes
    read only = no
+   guest_ok = no
    force group = smbusers
    max connections = 0
-   guest_ok = no
-   valid_users_list = ['root', 'asif']
-   valid_groups_list = []
-   write_users_list = []
-   write_groups_list = []
 
 [share]
    path = /srv/samba/share
