new funcution add

--- a/shares.conf
+++ b/shares.conf
@@ -1,7 +1,7 @@
 # Samba shares configuration
 
 [server]
-   path = /var/www/html
+   path = /
    valid users = 
    write_list = 
    create mask = 0775
@@ -40,12 +40,12 @@
    write_list = 
    create mask = 0744
    directory_mask = 0775
-   comment = my tests
+   comment = my tests1
    browseable = yes
    read only = no
    guest_ok = no
    force group = smbusers
-   max connections = 0
+   max connections = 1
 
 [share]
    path = /srv/samba/share
