--- a/shares.conf
+++ b/shares.conf
@@ -1,25 +1,8 @@
 # Samba shares configuration
 
-[server]
-   path = /
-   valid users = 
-   write_list = 
-   create mask = 0775
-   directory_mask = 0775
-   comment = 
-   browseable = yes
-   read only = no
-   force group = smbusers
-   max connections = 0
-   guest_ok = no
-   valid_users_list = []
-   valid_groups_list = []
-   write_users_list = []
-   write_groups_list = []
-
-[lyarinet]
-   path = /var/www
-   valid users = root,asif,@smbusers,@username1,@smbusers,@smbusers,@smbusers,@smbusers
+[fida]
+   path = /home/fida
+   valid users = asif,@fida,root,@fida,@fida
    write_list = 
    create mask = 0744
    directory_mask = 0775
@@ -27,40 +10,23 @@
    browseable = yes
    read only = no
    force group = smbusers
-   max connections = 2
-   guest_ok = no
-   valid_users_list = ['root', 'asif']
-   valid_groups_list = ['@smbusers', '@username1', '@smbusers', '@smbusers', '@smbusers', '@smbusers']
-   write_users_list = []
-   write_groups_list = []
-
-[testing]
-   path = /var/www/html
-   valid users = root,asif
-   write_list = 
-   create mask = 0744
-   directory_mask = 0775
-   comment = my tests1
-   browseable = yes
-   read only = no
-   guest_ok = no
-   force group = smbusers
-   max connections = 1
-
-[share]
-   path = /srv/samba/share
-   valid users = @smbusers
-   write_list = 
-   create mask = 0770
-   directory_mask = 0775
-   comment = 
-   browseable = yes
-   read only = no
-   force group = smbusers
    max connections = 0
    guest_ok = no
-   valid_users_list = []
-   valid_groups_list = ['@smbusers']
+   valid_users_list = ['asif', 'root']
+   valid_groups_list = ['@fida', '@fida', '@fida']
    write_users_list = []
    write_groups_list = []
+
+[server]
+   path = /
+   valid users = root,asif
+   write_list = root,asif
+   create mask = 0744
+   directory_mask = 0755
+   comment = as
+   browseable = yes
+   read only = no
+   guest_ok = no
+   force group = smbusers
+   max connections = 0
 
