Improve workflow naming and organization
- Rename CI workflow to 'CI - Functional Tests'
- Rename Code Quality workflow to 'Code Quality - Style Checks'
- Update job names to be more descriptive
- Clarify the different purposes of each workflow

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,4 +1,4 @@
-name: Code Quality
+name: Code Quality - Style Checks
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  quality:
+  style-checks:
     runs-on: ubuntu-latest
 
     steps:
