Add footer with copyright and LyariTech branding
- Added footer section to layout.html with copyright notice
- Included link to lyaritech.com as requested
- Updated body styling to use flexbox for proper footer positioning
- Added flex-grow to content area to push footer to bottom
- Footer appears on all pages with responsive design

--- a/shares.conf
+++ b/shares.conf
@@ -1,29 +1,12 @@
 # Samba shares configuration
 
-[fida]
-   path = /home/fida
-   valid users = asif,@fida,root,@fida,@fida
+[web]
+   path = /mnt
+   valid users = @nogroup
    write_list = 
    create mask = 0744
-   directory_mask = 0775
-   comment = my test
-   browseable = yes
-   read only = no
-   force group = smbusers
-   max connections = 0
-   guest_ok = no
-   valid_users_list = ['asif', 'root']
-   valid_groups_list = ['@fida', '@fida', '@fida']
-   write_users_list = []
-   write_groups_list = []
-
-[server]
-   path = /
-   valid users = root,asif
-   write_list = root,asif
-   create mask = 0744
    directory_mask = 0755
-   comment = as
+   comment = my test
    browseable = yes
    read only = no
    guest_ok = no
